# macrocosmos-mcp

./: README.md  pyproject.toml
macrocosmos_mcp/: macrocosmos_mcp.py  macrocosmos_mcp_sse.py
src/: macrocosmos_mcp.py  macrocosmos_mcp_sse_final.py
